1999-01-01  Roland McGrath  <roland@baalperazim.frob.com>

	* interrupt-on-notify.c (ports_interrupt_self_on_notification): Use
	assert to check we are in an rpc; don't return EIEIO (not appropriate).

1997-08-14  Miles Bader  <miles@gnu.ai.mit.edu>

	* interrupt-rpcs.c (ports_interrupt_rpcs): Put RPC into the
	interrupted list.
	* end-rpc.c (ports_end_rpc): Call ports_self_interrupted to remove
	the current thread from the interrupted list.
	* ports.h (ports_self_interrupted): New declaration.
	(struct rpc_info): Add interrupted_next field.
	* Makefile (SRCS): Add interrupted.c.

Wed Aug 20 13:56:40 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* manage-multithread.c (ports_manage_port_operations_multithread):
 	Drop parms `wire_cthreads' and `wire_threads'.  Add parm `hook'.
	(thread_function): Call HOOK instead of cthread_wire and/or
	thread_wire.
	* ports.h (ports_manage_port_operations_multithread): Adjust
	declaration.

Fri Feb 14 00:51:32 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* create-bucket.c (ports_create_bucket): Initialize rpcs, flags, &
	count fields in RET.

Thu Sep 12 16:19:35 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libports.so): Delete special depedency.

Wed Aug  7 15:28:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ports.h (_ports_create_port_internal,
	ports_create_port_noinstall): New declarations.

Thu Jul 18 22:59:14 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (SRCS): Add create-port-noinstall.c and create-internal.c.
	* create-port-noinstall.c: New file.
	* create-port.c (ports_create_port): Guts deleted; call new work
	function.
	* create-internal.c:  New file; all the guts from create-port.c.

Wed Jul  3 14:13:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* get-right.c (ports_get_right): Supply correct sync value in
 	notification request.

Mon May  6 16:33:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
