@@ -1,3 +1,8 @@
+Thu Feb 25 10:31:57 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* end-rpc.c (ports_end_rpc): Signal ports_block anytime an rpc
+	ends and someone is waiting on an inhibition.  
+
 1999-01-01  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* interrupt-on-notify.c (ports_interrupt_self_on_notification): Use
